<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/overview_menu_item"
        android:title="@string/overview_menu_item"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never" />

    <item android:id="@+id/manage_bills_menu_item"
        android:title="@string/manage_bills_menu_item"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never" />

    <item android:id="@+id/report_menu_item"
        android:title="@string/report_menu_item"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never" />

    <item android:id="@+id/settings_menu_item"
        android:title="@string/settings_menu_item"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never" />

    <item android:id="@+id/admin_menu_item"
        android:title="@string/admin_menu_item"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never" />

    <item android:id="@+id/log_out_menu_item"
        android:title="@string/log_out_menu_item"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never" />

</menu>