<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    style="@style/layout_full"
    android:fillViewport="false">
    >

    <LinearLayout
        android:orientation="vertical"
        tools:context=".view.OverviewActivity"
        style="@style/layout_full">
        >

        <TextView
            style="@style/layout_vertical"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Touch the bill you wish to edit:"
            android:textStyle="bold"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:padding="5dp"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editBillsTableLayout"
            android:shrinkColumns="*"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/labelsTableRow"
                android:background="#DCDCDC">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label"
                    android:id="@+id/descLabel"
                    android:layout_weight="2"
                    android:textStyle="bold|italic"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_label"
                    android:id="@+id/amountLabel"
                    android:layout_weight="1"
                    android:textStyle="bold|italic"
                    android:padding="5dp"
                    android:gravity="right"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category_label"
                    android:id="@+id/categoryLabel"
                    android:layout_weight="1"
                    android:textStyle="bold|italic"
                    android:padding="5dp"
                    android:gravity="right"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>